update cicd